# rest-api-extension

./: .gitignore  CMakeLists.txt  Makefile  README.md  animals.wal  extension_config.cmake  rest_api_extension.json  testdata.json
.github_disabled/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: api_request.cpp  extract_filters.cpp  helpers.cpp  logger.cpp  models.cpp  prepare_query.cpp  quack_extension.cpp  rest_api_config.cpp  rest_api_extension.cpp  rest_api_extension_extension.cpp
src/include/: api_request.hpp  extract_filters.hpp  helpers.hpp  logger.hpp  models.hpp  prepare_query.hpp  rest_api_config.hpp  rest_api_extension.hpp  rest_api_extension_extension.hpp
test/sql/: rest_api_extension.test
